refactor: clean up codebase to address SonarCloud code smells and improve maintainability